--- a/views/resume.html
+++ b/views/resume.html
@@ -34,7 +34,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/my-site/views/home.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="/my-site/views/index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="/my-site/views/hobbies.html">Hobbies</a>
