--- a/views/resume.html
+++ b/views/resume.html
@@ -85,7 +85,7 @@
         </div>
 
         
-        <div style="margin-top: 50px; margin-right: 900px; margin-left: 400px;">
+        <div style="margin-top: 50px; margin-right: 600px; margin-left: 400px;">
             <h5>Summary</h5>
             Certified Linux IT Associate & Computer Science student at the University of Colorado at Boulder’s College of Engineering and Applied Science, seeking pro-bono internship or project-based opportunities for Spring 2026 to gain more programming and sysadmin experience.
         </div>
@@ -96,14 +96,14 @@
             <div style="margin-top: 5px">Fluent Portuguese; Basic Spanish & German skills</div>
         </div>
 
-        <div style="margin-top: 10px; margin-right: 900px; margin-left: 400px;">
+        <div style="margin-top: 10px; margin-right: 600px; margin-left: 400px;">
             <h5>Education</h5>
             <div style="margin-top: 5px">BS in Computer Science, College of Engineering and Applied Sciences, University of Colorado-Boulder, CU, Expected Graduation May 2029</div>
             <div style="margin-top: 5px">Linux Foundation Certified IT Associate, 2025</div>
             <div style="margin-top: 5px">Liberal Arts and Science Academy (Austin, TX) 2025 Graduate with Magnet Program Endorsement</div>
         </div>
 
-        <div style="margin-top: 10px; margin-right: 900px; margin-left: 400px;">
+        <div style="margin-top: 10px; margin-right: 600px; margin-left: 400px;">
             <h5>Internships and Professional Experience</h5>
             <div style="margin-top: 5px">Mirakulo, June 2024–July 2024, Websocket programming</div>
             <div style="margin-top: 5px">
@@ -115,7 +115,7 @@
             </div>
         </div>
 
-        <div style="margin-top: 10px; margin-right: 900px; margin-left: 400px;">
+        <div style="margin-top: 10px; margin-right: 600px; margin-left: 400px;">
             <h5>Volunteering, Leadership & Analytics</h5>
 
             <div style="margin-top: 5px">Member, CU Boulder Game Design Club, October 2025 - May 2026</div>
@@ -144,10 +144,13 @@
             </div>
         </div>
 
-        <div style="margin-top: 10px; margin-right: 900px; margin-left: 400px;">
+        <div style="margin-top: 10px; margin-right: 600px; margin-left: 400px;">
             Interests: IT, System Administration, DevOps, Software Engineering
         </div>
 
+        <a href="/resources/img/William Castro Estevam Brito Resume.pdf" target="_blank" download="William Castro Estevam Brito.pdf">
+            <button>Download PDF</button>
+        </a>
 
         <div class="card text-center fixed-bottom"> 
             <div class="card-header">
