Fixed file path naming for the resume download button.

--- a/views/resume.html
+++ b/views/resume.html
@@ -148,7 +148,7 @@
             Interests: IT, System Administration, DevOps, Software Engineering
         </div>
 
-        <a href="/resources/img/William Castro Estevam Brito Resume.pdf" target="_blank" download="William Castro Estevam Brito.pdf">
+        <a href="/my-site/resources/img/William Castro Estevam Brito Resume.pdf" target="_blank" download="William Castro Estevam Brito.pdf">
             <button>Download PDF</button>
         </a>
 
