Thank you akhil

--- a/views/resume.html
+++ b/views/resume.html
@@ -152,7 +152,7 @@
             <button>Download PDF</button>
         </a>
 
-        <div class="card text-center fixed-bottom"> 
+        <div class="card text-center"> 
             <div class="card-header">
                 Featured:
             </div>
