--- a/views/index.html
+++ b/views/index.html
@@ -73,6 +73,9 @@
                 <a aria-current="page" href="/my-site/views/resume.html">
                     Look at my resume
                 </a>
+                <a aria-current="page" href="/my-site/views/calendar.html">
+                    Check this calendar application
+                </a>
             </div>
         </div>
     </div>
