re-corrected formatting

--- a/views/projects.html
+++ b/views/projects.html
@@ -197,10 +197,12 @@
                 <a href="https://www.linkedin.com/in/william-brito-b580a2365/">
                     <img src="/my-site/resources/img/linkedin-svgrepo-com.svg" length="40" width="30" alt="My LinkedIn Profile">
                 </a>
-                <br>
-                <a href="https://github.com/WillisBurr">
-                    <img src="/my-site/resources/img/GitHub_Invertocat_Black.svg" length="40" width="30" alt="My GitHub Profile">
-                </a>
+                
+                <div>
+                    <a href="https://github.com/WillisBurr">
+                        <img src="/my-site/resources/img/GitHub_Invertocat_Black.svg" length="40" width="30" alt="My GitHub Profile">
+                    </a>
+                </div>
             </div>
         </div>
     </body>
