ACTUALLY corrected the formatting of the calendar link

--- a/views/index.html
+++ b/views/index.html
@@ -73,8 +73,9 @@
                 <a aria-current="page" href="/my-site/views/resume.html">
                     Look at my resume
                 </a>
+                and also
                 <a aria-current="page" href="/my-site/views/calendar.html">
-                    Check this calendar application
+                    check this calendar application
                 </a>
             </div>
         </div>
